--- a/index.html
+++ b/index.html
@@ -4,22 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up Form</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="left-container">
+            <div class="logo">
+                <img src="./images/9291927.png" alt="logo">
+                <h1 class="Odin">Odin</h1>
+            </div>
 
-
+            <div class="footer"></div>
         </div>
         <div class="right-container">
+            <div class="up-container">
             <div class="up">
-
+                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started</h2>
+                <h2>You know you want to.</h2>
             </div>
+        </div>
         <div class="mid">
-
+            <p>Let's do this!</p>
         </div>
         <div class="bottom">
-            
+            <button>Create Account</button>
+            <div class="acc">Already have an account? <a href=""></a>Log in</div>
         </div>
         </div>
     </div>
