--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="left-container">
             <div class="logo">
                 <img src="./images/9291927.png" alt="logo">
-                <h1 class="Odin">Odin</h1>
+                <h1 class="neoff">Neoff</h1>
             </div>
 
             <div class="footer"></div>
@@ -23,9 +23,35 @@
                 <h2>You know you want to.</h2>
             </div>
         </div>
-        <div class="mid">
-            <p>Let's do this!</p>
+        <form action="#">
+            <div class="form-right">
+            <p class="form-title">Let's do this!</p>
+            <div class="input">
+                <label for="first-name">First name</label>
+                <input type="text" name="first-name" id="first-name" required>
+            </div>
+            <div class="input">
+                <label for="last-name">Last name</label>
+                <input type="text" name="last-name" id="last-name">
+            </div>
+            <div class="input">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required>
+            </div>
+            <div class="input">
+                <label for="phone-number">Phone number</label>
+                <input type="text" name="phone-number" id="phone-number" minlength="9" maxlength="9">
+            </div>
+            <div class="input">
+                <label for="password">Password</label>
+                <input type="password" name="passwor" id="passwor" required>
+            </div>
+            <div class="input">
+                <label for="confirm-password">Confirm password</label>
+                <input type="password" name="confirm-password" id="confirm-password" required>
+            </div>
         </div>
+        </form>
         <div class="bottom">
             <button>Create Account</button>
             <div class="acc">Already have an account? <a href=""></a>Log in</div>
