--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&amp;display=swap" rel="stylesheet">
     <title>Sign-up Form</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -17,14 +18,14 @@
             <div class="footer"></div>
         </div>
         <div class="right-container">
-            <div class="up-container">
+            <div class="up-container right">
             <div class="up">
                 <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started</h2>
                 <h2>You know you want to.</h2>
             </div>
         </div>
         <form action="#">
-            <div class="form-right">
+            <div class="form right">
             <p class="form-title">Let's do this!</p>
             <div class="input">
                 <label for="first-name">First name</label>
@@ -51,12 +52,13 @@
                 <input type="password" name="confirm-password" id="confirm-password" required>
             </div>
         </div>
-        </form>
-        <div class="bottom">
-            <button>Create Account</button>
-            <div class="acc">Already have an account? <a href=""></a>Log in</div>
-        </div>
-        </div>
+        <div class="button right">
+        <button type="submit">Create Account</button>
     </div>
+        </form>
+            <div class="acc right">Already have an account? <a href="">Log in</a></div>
+        </div>
+        </div>
+    
 </body>
 </html>
