--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <h1 class="neoff">Neoff</h1>
             </div>
 
-            <div class="footer"></div>
+            <div class="footer">Sign up now for exlusive prices!</div>
         </div>
         <div class="right-container">
             <div class="up-container right">
             <div class="up">
-                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started</h2>
-                <h2>You know you want to.</h2>
+                <h2>Illuminate your world with vibrant radiance from our mesmerizing neon lights collection.</h2>
+                <h2>Just sign up!</h2>
             </div>
         </div>
         <form action="#">
